# polySGPmcp

./: .dockerignore  .env  .env.example  DEPLOY.md  Dockerfile  README.md  debug_aggregation_live.py  debug_bucket_verify.py  debug_coverage_final.py  debug_low_temp.py  debug_quality_scan.py  debug_radiosonde.py  debug_radiosonde2.py  debug_radiosonde3.py  debug_scheduler_once.py  debug_settled_sg.py  debug_sg_markets.py  debug_sounding_prompt.py  debug_stability_test.py  debug_strategy_forecast.py  debug_strategy_live.py  debug_tags.py  debug_tags2.py  debug_tags3.py  debug_tags4.py  debug_tags5.py  debug_temperature.py  debug_verify_fix.py  demo.py  demo_calibration.py  demo_strategy.py  docker-compose.yml  hermes_decisions.db  pyproject.toml
.claude/: settings.local.json
agent/: aggregation.py  hermes.py  manual_input.py  memory.py  models.py  prompts.py  risk.py  strategy.py
agent/calibration/: __main__.py  analyze.py  collector.py  (+5 more)
common/: config.py  logging.py
data/: hermes_decisions.db  last_run.txt
hermes_weather_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polymarket/: client.py  markets.py  models.py  quality.py  temperature.py
scheduler/: __main__.py  cron.py
scripts/: verify_report.py
tests/: conftest.py  test_aggregation.py  test_calibration.py  test_hermes.py  test_llm.py  test_manual_input.py  test_memory.py  test_polymarket.py  test_prompts.py  test_quality.py  test_risk.py  test_scheduler.py  test_semantic_filter.py  test_settlement.py  test_strategy.py  test_temperature.py  test_weather.py
weather_mcp/: tools.py
(+7 files in other folders)
